--- a/wear/src/main/res/layout/round_activity_main.xml
+++ b/wear/src/main/res/layout/round_activity_main.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/imageView"
+        android:id="@+id/tip"
         android:layout_gravity="center"
         android:onClick="imageView_onClick"
         android:scaleType="fitCenter"
@@ -27,6 +27,6 @@
         android:layout_gravity="center"
         android:visibility="gone"
         android:textSize="@android:dimen/notification_large_icon_height"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/tip"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
