--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="action_bar_background_color">#f0bababa</color>
     <color name="action_background_color">#ff2878ff</color>
+    <color name="action_background_color_down">#ff195ccf</color>
 </resources>
